This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
4/10/17: Fixed UpdateHardwareDarkRef command to treat its hours value properly
and to keep script from plowing ahead after starting it (In 3.6).

4/9/17: Added ability to import navigator items with positions defined by
image coordinates on maps.

4/8/17: Updated MiniXML library to eliminate bad memory leaks when reading or
writing an XML file (In 3.6).

4/6/17: Fixed double-clicking to remove Navigator point with collapse groups
on (In 3.6).

4/6/17: Added a camera property to enable or disable post-exposure actions for
one camera; for OneView, post-actions are disabled by default (In 3.6).

4/5/17: Fixed Realign to Item going out of Low Dose when realigning to a
polygon map where frame sizes are not the same as the current image sizes;
also enabled staying in Low Dose with change in intensity, exposure, or binning
between the map and current Low Dose parameters (In 3.6).

4/5/17: Prevented progressive change of IS when setting and restoring a state
goes out of and into Low Dose with Balance Shifts on; also improved behavior
of Realign to Item with  Balance Shifts on (In 3.6).

4/5/17: Fixed doubling of values in montage overview from unsigned images,
which solves wraparound of high values and bad scaling when loading maps as
bytes; also fixed another source of bad scaling when loading maps (In 3.6).

3/17/17: Fix having it drop screen for STEM when leaving camera setup even
when not going into STEM (In 3.6).

3/15/17: Properly initialized image shift values when switching to a low dose
imaging state; zero out axis position values > 100 from settings (In 3.6).

3/13/17: Added script commands to change a Navigator item's registration and
to shift items by a given number of microns.
